@@ -1,5 +1,5 @@
 Source: openssl
-Build-Depends: debhelper (>= 5.0.22), zlib1g-dev, m4, bc
+Build-Depends: debhelper (>= 8.1.3), zlib1g-dev, m4, bc
 Section: utils
 Priority: optional
 Maintainer: Debian OpenSSL Team <pkg-openssl-devel@lists.alioth.debian.org>
@@ -30,6 +30,8 @@ Package: libssl1.0.0
 Section: libs
 Priority: important
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: SSL shared libraries
  libssl and libcrypto shared libraries needed by programs like
@@ -76,6 +78,7 @@ Package: libssl1.0.0-dbg
 Section: debug
 Priority: extra
 Architecture: any
+Multi-Arch: same
 Depends: libssl1.0.0 (= ${binary:Version}), ${misc:Depends}
 Description: Symbol tables for libssl and libcrypto
  This package is part of the OpenSSL implementation of SSL.
